--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>panda-weather</title><link href="/js/about.196dc125.js" rel="prefetch"><link href="/css/app.a36292a0.css" rel="preload" as="style"><link href="/js/app.155fcea3.js" rel="preload" as="script"><link href="/js/chunk-vendors.e6e95961.js" rel="preload" as="script"><link href="/css/app.a36292a0.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but panda-weather doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.e6e95961.js"></script><script src="/js/app.155fcea3.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.ca9972cf.js"></script>
+    <link rel="stylesheet" href="/assets/index.b98069ba.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
+</html>
