--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>panda-weather</title><link href="/js/about.7f6ff35d.js" rel="prefetch"><link href="/css/app.7daa607b.css" rel="preload" as="style"><link href="/js/app.07fa03e6.js" rel="preload" as="script"><link href="/js/chunk-vendors.e683f7ac.js" rel="preload" as="script"><link href="/css/app.7daa607b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but panda-weather doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.e683f7ac.js"></script><script src="/js/app.07fa03e6.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title> The Panda Weather</title>
+    <script type="module" crossorigin src="/assets/index.d5b21d23.js"></script>
+    <link rel="stylesheet" href="/assets/index.1efac31c.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
+</html>
